Add support for telemetry proxying
